--- a/factchecking-demo/src/app/app.component.html
+++ b/factchecking-demo/src/app/app.component.html
@@ -1,23 +1,23 @@
 <div class="example-container">
     <mat-toolbar color="primary">{{title}}</mat-toolbar>
     <mat-form-field class="example-full-width" la>
-      <input matInput placeholder="Subject" [(ngModel)]="subjectURI" [value]="subjectURI">
+      <input matInput placeholder="Subject" [(ngModel)]="subjectURI">
       <mat-hint>Enter a subject uri</mat-hint>
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Predicate" [(ngModel)]="predicateURI" [value]="predicateURI">
+      <input matInput placeholder="Predicate" [(ngModel)]="predicateURI">
       <mat-hint>Enter a predicate uri</mat-hint>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Object" [(ngModel)]="objectURI" [value]="objectURI">
+      <input matInput placeholder="Object" [(ngModel)]="objectURI">
       <mat-hint>Enter a object uri</mat-hint>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>FC Algorithm</mat-label>
-      <mat-select>
+      <mat-select (selectionChange)='selectedAlgorithm($event.value)'>
         <mat-option *ngFor="let algorithm of algorithms" [value]="algorithm.value">
           {{algorithm.viewValue}}
         </mat-option>
